fix for scrollbar bug

--- a/app/assets/stylesheets/widget.scss
+++ b/app/assets/stylesheets/widget.scss
@@ -38,6 +38,10 @@ $mobile: 500px;
   }
 }
 
+html {
+  overflow: hidden;
+}
+
 .container {
   font-family: ProximaNovaCond;
   background: $black;
